--- a/.htaccess
+++ b/.htaccess
@@ -11,7 +11,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # Configuración de páginas de error
 ErrorDocument 404 /biblioteca/error/404.php
 ErrorDocument 403 /biblioteca/error/404.php
-ErrorDocument 500 /biblioteca/500.php
+ErrorDocument 500 /biblioteca/error/500.php
 
 # Proteger el archivo .htaccess
 <Files .htaccess>
